fix jdk11 warnings